--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="header__column header__column_second">
-              <a href="#!" class="header__logo">Landie</a>
+              <a href="#!" class="logo header__logo">Landie</a>
             </div>
 
             <div class="header__column header__column_third">
@@ -47,12 +47,12 @@
         <!-- header end -->
 
         <div class="promo__about">
-          <h1 class="title promo__title">Introduce Your Product<br> Quickly & Effectively</h1>
-          <p class="promo__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean<br> commodo
+          <h1 class="title promo__title">Introduce Your Product Quickly & Effectively</h1>
+          <p class="promo__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
             ligula
-            eget dolor. Aenean massa. Cum sociis natoque<br> penatibus et magnis dis parturient montes, nascetur
+            eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
             ridiculus<br><br>
-            mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis,<br> sem. Nulla consequat massa quis
+            mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
             enim.
           </p>
           <div class="promo__btns">
@@ -63,7 +63,150 @@
       </div>
     </section>
     <!-- promo end -->
+
+    <!-- about start -->
+    <section class="about">
+      <div class="container">
+        <div class="about-wrapper">
+
+          <div class="about-wrapper__item">
+            <h2 class="title about__title">Light, Fast & Powerful</h2>
+            <p class="about__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+              ligula
+              eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
+              ridiculus<br><br>
+              mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
+              enim.
+            </p>
+            <div class="about-wrapper__cards">
+
+              <div class="about-wrapper__card">
+                <div class="about-wrapper__card-image">
+                  <img src="./assets/icons/card-icon/cartImg.svg" alt="card-icon">
+                </div>
+                <h3 class="title about-wrapper__card-title">Title Goes Here</h3>
+                <p class="about-wrapper__card-descr">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                </p>
+              </div>
+
+              <div class="about-wrapper__card">
+                <div class="about-wrapper__card-image">
+                  <img src="./assets/icons/card-icon/cartImg.svg" alt="card-icon">
+                </div>
+                <h3 class="title about-wrapper__card-title">Title Goes Here</h3>
+                <p class="about-wrapper__card-descr">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                </p>
+              </div>
+
+            </div>
+          </div>
+          <div class="about-wrapper__item">
+            <div class="about-wrapper__item-image">
+              <img src="./assets/img/aboutImg.png" alt="about-image">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- about end -->
+
+    <!-- info start -->
+    <section class="info">
+      <div class="container container_xl">
+        <div class="info-wrapper">
+          <div class="info__col">
+            <div class="info-img">
+              <img src="./assets/img/infoImg.png" alt="info-img">
+            </div>
+          </div>
+          <div class="info__col">
+            <h2 class="title info__title">Light, Fast & Powerful</h2>
+            <p class="info__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+              ligula
+              eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
+              ridiculus<br><br>
+              mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
+              enim.
+            </p>
+            <div class="info__cards">
+
+              <div class="info__card">
+                <div class="info__card-image">
+                  <img src="./assets/icons/card-icon/cartImg.svg" alt="card-icon">
+                </div>
+                <h3 class="title info__card-title">Title Goes Here</h3>
+                <p class="info__card-descr">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                </p>
+              </div>
+
+              <div class="info__card">
+                <div class="info__card-image">
+                  <img src="./assets/icons/card-icon/cartImg.svg" alt="card-icon">
+                </div>
+                <h3 class="title info__card-title">Title Goes Here</h3>
+                <p class="info__card-descr">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                </p>
+              </div>
+
+              <div class="info__card">
+                <div class="info__card-image">
+                  <img src="./assets/icons/card-icon/cartImg.svg" alt="card-icon">
+                </div>
+                <h3 class="title info__card-title">Title Goes Here</h3>
+                <p class="info__card-descr">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                </p>
+              </div>
+
+              <div class="info__card">
+                <div class="info__card-image">
+                  <img src="./assets/icons/card-icon/cartImg.svg" alt="card-icon">
+                </div>
+                <h3 class="title info__card-title">Title Goes Here</h3>
+                <p class="info__card-descr">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                </p>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- info end -->
   </main>
+  <footer class="footer">
+    <div class="container">
+      <a href="#!" class="logo footer__logo">Landie</a>
+      <div class="footer__busines">
+        <span class="footer__copyrate">©2020 Yourcompany</span>
+        <a href="#!" class="footer__purchase">Purchase now</a>
+      </div>
+
+      <div class="footer__devider"></div>
+
+      <div class="footer__links">
+        <nav class="footer-nav">
+          <ul class="footer__list">
+            <li class="footer__list-item"><a href="#!" class="footer__link">Home</a></li>
+            <li class="footer__list-item"><a href="#!" class="footer__link">About</a></li>
+            <li class="footer__list-item"><a href="#!" class="footer__link">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="footer__social">
+          <a href="#!" class="footer__social-link"><i class="icon-facebook"></i></a>
+          <a href="#!" class="footer__social-link"><i class="icon-Instagram"></i></a>
+          <a href="#!" class="footer__social-link"><i class="icon-linkedln"></i></a>
+          <a href="#!" class="footer__social-link"><i class="icon-twitter"></i></a>
+          <a href="#!" class="footer__social-link"><i class="icon-youtube"></i></a>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="js/script.js"></script>
 </body>
 
