completed project and test task js

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="header__column header__column_third">
-              <a href="#!" class="header__btn-buy">By Now</a>
+              <a href="#!" class="header__btn-buy">Buy Now</a>
             </div>
           </div>
 
